--- a/keepalived-vip/Dockerfile
+++ b/keepalived-vip/Dockerfile
@@ -29,7 +29,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   ca-certificates \
   iproute2 \
   ipvsadm \
-  bash && \
+  bash \
+  curl && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/*
 
