--- a/keepalived-vip/Makefile
+++ b/keepalived-vip/Makefile
@@ -1,8 +1,8 @@
 all: push
 
 # 0.0 shouldn't clobber any release builds, current "latest" is 0.11
-TAG = 0.11
-PREFIX = staging-k8s.gcr.io/kube-keepalived-vip
+TAG = 0.11_notify
+PREFIX = localhost:5000/keepalived-vip
 BUILD_IMAGE = build-keepalived
 TEMP_GOPATH = ${GOPATH}:${GOPATH}/src/k8s.io/kubernetes/staging
 
@@ -20,7 +20,7 @@ keepalived:
 	docker rm -f $(BUILD_IMAGE)
 
 push: container
-	gcloud docker -- push $(PREFIX):$(TAG)
+	docker push $(PREFIX):$(TAG)
 
 clean:
 	rm -f kube-keepalived-vip
